# COMP_371_PROJECT

./: CMakeLists.txt  README.MD  main.cpp
Utilities/: Camera.cpp  Camera.h  Light.h  Matrices.cpp  Matrices.h  Mesh.cpp  Mesh.h  Plane.h  RenderSetupHelper.cpp  RenderSetupHelper.h  SceneLoader.cpp  SceneLoader.h  Sphere.cpp  Sphere.h  Vectors.cpp  Vectors.h
Utilities/Math/: DepthBuffer.cpp  DepthBuffer.h  Matrices.cpp  Matrices.h  Ray.cpp  Ray.h  RayContainer.cpp  RayContainer.h  RayTracer.cpp  RayTracer.h  Vectors.cpp  Vectors.h
Utilities/ObjectParser/: MeshFace.cpp  MeshFace.h  MeshLoader.cpp  MeshLoader.h
Utilities/SceneElements/: Camera.cpp  Camera.h  Light.cpp  Light.h  Mesh.h  Plane.cpp  Plane.h  SceneObject.cpp  SceneObject.h  Sphere.h
scenes/: mesh_scene2.txt  patrick_scene.txt  scene1.txt  scene2.txt  scene5.txt
